# pdf-translation

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/pdf_translator/: __init__.py  __main__.py  cache.py  cli.py  config.py  extractor.py  font_manager.py  logger.py  models.py  processor.py  renderer.py  translategemma.py  translator.py  vision_analyzer.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_extractor.py  test_font_manager.py  test_models.py  test_processor.py  test_renderer.py  test_translator.py  test_vision_analyzer.py
tests/fixtures/: .gitkeep
