[project]
name = "pdf-translator"
version = "0.1.0"
description = "CLI tool to translate PDF files from English to Vietnamese while preserving layout"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"

dependencies = [
    "pymupdf>=1.25.0",           # PDF processing
    "openai>=1.60.0",            # DeepSeek API (OpenAI-compatible)
    "click>=8.1.0",              # CLI framework
    "tqdm>=4.66.0",              # Progress bar
]

[project.scripts]
pdf-translator = "pdf_translator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_translator"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
